Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -225,7 +225,9 @@
         "Book": "Book",
         "Person": "Person",
         "Organization": "Organization",
-        "NativeName": "Native Name"
+        "NativeName": "Native Name",
+        "Author": "Author",
+        "Press": "Press"
     },
 	
 	"Message": {
