Continues the development, 2015.12.31, part II.

--- a/locales/en.json
+++ b/locales/en.json
@@ -81,7 +81,8 @@
     	"ConfirmedPassword": "Confirm Password",
     	"Male": "Male",
     	"Female": "Female",
-        "LastLogin": "Last Login"
+        "LastLogin": "Last Login",
+        "SeqNo": "Seq. No"
  	},
  	
  	"Nav": {
