Continues the development, 2015.01.02, Part I.

--- a/locales/en.json
+++ b/locales/en.json
@@ -275,6 +275,8 @@
 		"InvalidPassword": "Invalid password",
 		"InvalidConfirmedPassword": "Difference exists between Password and Confirmed password",
 		"InvalidMailbox": "Invalid mailbox",
-		"InvalidScore": "Invalid score"
+		"InvalidScore": "Invalid score",
+        "MissingName": "Missing name",
+        "MissingLanguage": "Missing language"
 	}
  }
