Continues the development, 2016.1.5, part I.

--- a/locales/en.json
+++ b/locales/en.json
@@ -58,6 +58,8 @@
 		"Max": "Max",
 		"Other": "Other",
 		"Others": "Others",
+        "Tags": "Tags",
+        "Tag": "Tag",
 		
 		"DeleteConfirmation" : "Delete Confirmation",
 		"ConfirmToDeleteSelectedItem": "The selected item(s) will be deleted. Do you confirm to continue?",
