Continues the development, 2016.1.12, part II.

--- a/locales/en.json
+++ b/locales/en.json
@@ -60,6 +60,7 @@
 		"Others": "Others",
         "Tags": "Tags",
         "Tag": "Tag",
+        "Setting": "Setting",
 		
 		"DeleteConfirmation" : "Delete Confirmation",
 		"ConfirmToDeleteSelectedItem": "The selected item(s) will be deleted. Do you confirm to continue?",
