--- a/locales/en.json
+++ b/locales/en.json
@@ -10,6 +10,7 @@
 		"Date": "Date",
 		"Precent": "Precentage",
 		"Close": "Close",
+        "Save": "Save",
 
 		"ListView": "List View",
 		"HierarchyView": "Hierarchy View",
