--- a/locales/zh.json
+++ b/locales/zh.json
@@ -10,6 +10,7 @@
 		"Date": "日期",
 		"Precent": "百分比",
 		"Close": "关闭",
+        "Save": "保存",
 
 		"ListView": "列表视图",
 		"HierarchyView": "树形视图",
