Continues the development, 2016.1.26, part I.

--- a/locales/en.json
+++ b/locales/en.json
@@ -133,13 +133,19 @@
  		"ObjectID": "Object ID",
  		"ObjectName": "Object Name",
 		"SimulatePlan": "Simulate Plan",
+        "Simulate": "Simulate",
+        "HideSimulate": "Hide Simulate",
 		"PlanDetailComparison": "Plan Detail Comparison",
 		"CreateDetail": "Create Detail",
 		"EditDetail": "Edit Detail",
 		"DisplayDetail": "Display Detail",
+        "SaveCurrentDetail": "Save Current Detail",
+        "CancelDetailEditing": "Cancel Detail Editing",
 		"CreateParticipant": "Create Participant",
 		"EditParticipant": "Edit Participant",
 		"DisplayParticipant": "Display Participant",
+        "SaveCurrentParticipant": "Save Current Participant",
+        "CancelParticipantEditing": "Cancel Participant Editing",
 		"StartDate": "Start Date",
 		"OneTime": "One Time",
 		"HEbbinghaus": "H. Ebbinghaus",
@@ -175,6 +181,7 @@
   		"InternalOrderReport": "Internal Order Report",
 		"OrderReport": "Order Report",
   		"DailyBalanceReport": "The Daily Balance Sheet",
+        "TranTypeReport": "Transaction Type Report",
 		"CreateItem": "Create an Item",
 		"DisplayItem": "Display an Item",
 		"EditItem": "Edit an Item",
@@ -194,6 +201,7 @@
 		"Rules": "Rules",
   		"Setting": "Finance Setting",
 		"ExchangeRate": "Exchange Rate",
+        "ExchangeRateList": "Exchange Rate List",
 		"ProposedExchangeRate": "Proposed Exchange Rate",
 		"LocalCurrency": "Local Currency",
         "Downpayment": "Downpayment",
