--- a/locales/zh.json
+++ b/locales/zh.json
@@ -133,13 +133,19 @@
  		"ObjectID": "学习对象ID",
  		"ObjectName": "学习对象名称",
 		"SimulatePlan": "计划模拟",
+        "Simulate": "模拟",
+        "HideSimulate": "隐藏模拟",
 		"PlanDetailComparison": "计划与记录对比",
 		"CreateDetail": "创建详细项",
 		"EditDetail": "编辑详细项",
 		"DisplayDetail": "显示详细项",
+        "SaveCurrentDetail": "保存当前详细项",
+        "CancelDetailEditing": "取消编辑详细项",
 		"CreateParticipant": "新建参与者",
 		"EditParticipant": "编辑参与者",
 		"DisplayParticipant": "显示参与者",
+        "SaveCurrentParticipant": "保存当前参与者",
+        "CancelParticipantEditing": "取消编辑参与者",
 		"StartDate": "开始日期",
 		"OneTime": "一次",
 		"HEbbinghaus": "H. Ebbinghaus记忆曲线",
@@ -174,6 +180,7 @@
   		"ControlCenterReport": "控制中心报表",
   		"OrderReport": "订单报表",
   		"DailyBalanceReport": "日常开支表",
+        "TranTypeReport": "收支类型汇总表",
 		"CreateItem": "新建行项目",
 		"DisplayItem": "显示行项目",
 		"EditItem": "编辑行项目",
@@ -193,6 +200,7 @@
 		"Rules": "规则",
 		"Setting": "财务设置",
 		"ExchangeRate": "汇率",
+        "ExchangeRateList": "汇率凭证列表",
 		"ProposedExchangeRate": "预测汇率",
 		"LocalCurrency": "本币",
         "Downpayment": "预收款/预付款",
